<resources>
    <string name="app_name"></string>
    <string name="recuperar"><u>¿Olvidaste tu contraseña?</u></string>
    <string name="correo">Correo</string>
    <string name="password">Contraseña</string>
    <string name="iniciarsesion">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="restablecerpassword">Restablecer contraseña</string>
    <string name="newpassword">Contraseña nueva</string>
    <string name="confirmnewpassword">Confirmar contraseña</string>
    <string name="ingresarcodigo">Ingresar código</string>
    <string name="confirmarcorreo">Confirmar correo</string>
    <string name="enviarcodigo">Enviar código</string>
    <string name="registro">Registro</string>
    <string name="ciudad">Ciudad</string>
    <string name="direccion">Dirección</string>
    <string name="telefono">Teléfono</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu">Menú</string>
    <string name="buscador">Buscador</string>
    <string name="carrito">Carrito</string>
    <string name="tienda">Tienda</string>
    <string name="atencion_al_cliente">Atención al cliente</string>
    <string name="favoritos">Favoritos</string>
    <string name="sobre_nosotros">Sobre Nosotros</string>
    <string name="ubicacion">Ubicación</string>
</resources>