<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/theme_gradients_background"
    tools:context=".view.ui.activities.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="1">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="226dp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/logonegroalma">
            </ImageView>

            <androidx.cardview.widget.CardView
                android:id="@+id/Bfondo"
                android:layout_width="335dp"
                android:layout_height="match_parent"
                android:layout_marginTop="45dp"
                android:layout_gravity="center"
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="@color/gris_dark">

                <EditText
                    android:id="@+id/Loginaddress"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/styloredondo_text"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/opensanslight"
                    android:hint="@string/correo"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:inputType="textEmailAddress">
                </EditText>

                <EditText
                    android:id="@+id/Loginpassword"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="85dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/styloredondo_text"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/opensanslight"
                    android:hint="@string/password"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:inputType="textPassword">
                </EditText>

                <Button
                    android:id="@+id/Biniciar"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="155dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="@color/purple_dark"
                    android:fontFamily="@font/opensanslight"
                    android:text="@string/iniciarsesion"
                    android:textColor="@color/white"
                    android:textSize="22dp"
                    android:textStyle="bold">
                </Button>

                <TextView
                    android:id="@+id/Brecuperar"
                    android:layout_width="233dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="225dp"
                    android:layout_marginStart="80dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/opensanslight"
                    android:text="@string/recuperar"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold">
                </TextView>

                <Button
                    android:id="@+id/Bregistrar"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="275dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="25dp"
                    android:backgroundTint="@color/purple_dark"
                    android:fontFamily="@font/opensanslight"
                    android:text="@string/registrarse"
                    android:textColor="@color/white"
                    android:textSize="22dp"
                    android:textStyle="bold">
                </Button>

            </androidx.cardview.widget.CardView>

        </GridLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>