<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.activities.RecuperarActivity"
    android:background="@drawable/theme_gradients_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="1">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="226dp"
                android:layout_marginTop="30dp"
                app:srcCompat="@drawable/logonegroalma">
            </ImageView>

            <TextView
                android:id="@+id/textRestablecerpassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/opensanslight"
                android:gravity="center"
                android:text="@string/restablecerpassword"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:textStyle="bold">
            </TextView>

            <androidx.cardview.widget.CardView
                android:id="@+id/Refondo"
                android:layout_width="335dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="@color/gris_dark">

                <TextView
                    android:id="@+id/RestablecerAddress"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/styloredondo_text"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/opensanslight"
                    android:hint="@string/correo"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:inputType="textEmailAddress">
                </TextView>

                <EditText
                    android:id="@+id/RestablecerConfirmAddress"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="85dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/styloredondo_text"
                    android:backgroundTint="@color/white"
                    android:hint="@string/confirmarcorreo"
                    android:fontFamily="@font/opensanslight"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:inputType="textEmailAddress">
                </EditText>

                <Button
                    android:id="@+id/ReEnviarCodigo"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="155dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="25dp"
                    android:backgroundTint="@color/purple_dark"
                    android:fontFamily="@font/opensanslight"
                    android:text="@string/enviarcodigo"
                    android:textColor="@color/white"
                    android:textSize="22dp"
                    android:textStyle="bold"/>

            </androidx.cardview.widget.CardView>

        </GridLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>